<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    tools:context="com.example.namlu.jeopardyandroidedition.MainActivity">

    <!-- ViewGroup for all quiz items -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <!-- Question 1 -->
        <TextView
            style="@style/HeadingQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/question_1_title"/>
        <TextView
            style="@style/TextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1"/>

        <RadioGroup
            android:id="@+id/rg_question_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_question_one_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1_a"/>
            <RadioButton
                android:id="@+id/rb_question_one_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1_b"/>
            <RadioButton
                android:id="@+id/rb_question_one_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1_c"/>
            <RadioButton
                android:id="@+id/rb_question_one_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1_d"/>
        </RadioGroup>

        <!-- Divider line -->
        <View style="@style/Divider"/>

        <!-- Question 2 -->
        <TextView
            style="@style/HeadingQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2_title"/>
        <TextView
            style="@style/TextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2"/>

        <LinearLayout
            android:id="@+id/cb_group_question_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_question_two_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2_a"/>
            <CheckBox
                android:id="@+id/cb_question_two_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2_b"/>
            <CheckBox
                android:id="@+id/cb_question_two_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2_c"/>
            <CheckBox
                android:id="@+id/cb_question_two_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2_d"/>
        </LinearLayout>

        <View style="@style/Divider"/>

        <!-- Question 3 -->
        <TextView
            style="@style/HeadingQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3_title"/>
        <TextView
            style="@style/TextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3"/>

        <EditText
            android:id="@+id/et_question_three"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/edit_text_hint"/>

        <View style="@style/Divider"/>

        <!-- Question 4 -->
        <TextView
            style="@style/HeadingQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4_title"/>
        <TextView
            style="@style/TextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4"/>
        
        <RadioGroup
            android:id="@+id/rg_question_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_question_four_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4_a"/>
            <RadioButton
                android:id="@+id/rb_question_four_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4_b"/>
            <RadioButton
                android:id="@+id/rb_question_four_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4_c"/>
            <RadioButton
                android:id="@+id/rb_question_four_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4_d"/>
        </RadioGroup>

        <View style="@style/Divider"/>

        <!-- Question 5 -->
        <TextView
            style="@style/HeadingQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5_title"/>
        <TextView
            style="@style/TextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5"/>

        <LinearLayout
            android:id="@+id/cb_group_question_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_question_five_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5_a"/>
            <CheckBox
                android:id="@+id/cb_question_five_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5_b"/>
            <CheckBox
                android:id="@+id/cb_question_five_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5_c"/>
            <CheckBox
                android:id="@+id/cb_question_five_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5_d"/>
        </LinearLayout>

        <View style="@style/Divider"/>

        <!-- Question 6 -->
        <TextView
            style="@style/HeadingQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_6_title"/>
        <TextView
            style="@style/TextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_6"/>

        <EditText
            android:id="@+id/et_question_six"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/edit_text_hint"/>

        <View style="@style/Divider"/>

        <!-- Submit results button -->
        <Button
            android:id="@+id/button_submit"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_submit"/>

    </LinearLayout>

</ScrollView>
